--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": [
+      "./types"
+    ],
+    "types": [
+      "index"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
